<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_transaction_type"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.jsonmysql2.TransactionType">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tt_customer_name"
        android:id="@+id/textView_customerName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />
<RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="70dp">
    <RadioButton
        android:text="@string/tt_cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_customerName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:id="@+id/radioButton" />

    <RadioButton
        android:text="@string/tt_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton"
        android:layout_alignLeft="@+id/radioButton"
        android:layout_alignStart="@+id/radioButton"

        android:id="@+id/radioButton2" />

    <RadioButton
        android:text="@string/tt_collection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton2"
        android:layout_alignLeft="@+id/radioButton2"
        android:layout_alignStart="@+id/radioButton2"

        android:id="@+id/radioButton3" />
</RadioGroup>

    <Button
        android:text="@string/tt_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp"
        android:id="@+id/button"
        android:onClick="sendMessage"/>
        

</RelativeLayout>
